JCK test failed to reject invalid class check01304m10n.

XMLWordPrintable

    • b09
    • x86
    • windows_xp
    • Verified

        The test case
        vm/cldc/typechecker/check/check013/check01304m1/check01304m1.html
        failed during JCK runtime 7 testing with JDK 7 b134 on Windows x64 OS

        The error message:
        Failed to reject invalid class check01304m10n

        Looks like a regression due to the test passed with JDK 7 b133 on the same platform.

              Assignee:
              Keith Mcguigan (Inactive)
              Reporter:
              Alexander Fomin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: