7030388: JCK test failed to reject invalid class check01304m10n

Restrict fix for 7020118 to only when checking exception handlers

Reviewed-by: dcubed, dholmes